# hips

./: .gitignore  LICENSE  MANIFEST.in  README.md  api.html  definitions.html  dev_api.html  examples.html  genindex.html  getting_started.html  heuristics.html  hips.heuristics.html  hips.html  hips.loader.html  hips.models.html  hips.solver.html  hips.utils.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  references.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
_autosummary/: hips.BoundDirection.html  hips.Comparator.html  hips.HeuristicStatus.html  hips.LPSense.html  hips.LPStatus.html  hips.ProblemSense.html  hips.VarTypes.html  hips.VariableBound.html  hips.heuristics.AbstractDiving.html  hips.heuristics.FeasibilityPump.html  hips.heuristics.FractionalDiving.html  hips.heuristics.FractionalDivingHeuristic.html  hips.heuristics.HeuristicBounds.html  hips.heuristics.LineSearchDiving.html  hips.heuristics.RENS.html  hips.heuristics.SimpleRounding.html  hips.heuristics.TwoStageFeasibilityPump.html  hips.heuristics._abstract_diving.AbstractDiving.html  hips.heuristics._heuristic.Heuristic.html  hips.load_problem.html  hips.loader.load_mps.html  hips.loader.load_mps_primitive.html  hips.loader.mps_loader.load_mps.html  hips.loader.mps_loader.load_mps_advanced.html  hips.loader.mps_loader.load_mps_primitive.html  hips.models.Constraint.html  hips.models.HIPSArray.html  hips.models.LPModel.html  hips.models.LinExpr.html  hips.models.MIPModel.html  hips.models.Variable.html  hips.solver.BranchAndBound.html  (+4 more)
(+160 files in other folders)
