[metadata]
# replace with your username:
name = hips-integer-programming
version = 0.0.3
author = Calvin Chau
author_email = calvin.chau@tum.de
description = A Python package for heuristically solving integer programs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cxlvinchau.github.io/hips
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src